--- a/index.html
+++ b/index.html
@@ -1,37 +1,183 @@
-#!/bin/bash
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Electronic Circuit Cyber Shield</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            overflow: hidden;
+            font-family: 'Courier New', monospace;
+        }
 
-# Detect the operating system
-detect_os() {
-    OS="Unknown"
-    if [[ "$OSTYPE" == "linux-gnu"* ]]; then
-        OS="Linux"
-    elif [[ "$OSTYPE" == "darwin"* ]]; then
-        OS="MacOS"
-    elif [[ "$OSTYPE" == "cygwin" || "$OSTYPE" == "msys" || "$OSTYPE" == "win32" ]]; then
-        OS="Windows"
-    else
-        OS=$(uname -s)
-    fi
-    echo "$OS"
-}
+        .shield {
+            width: 400px;
+            height: 480px;
+            background-color: #0066cc;
+            position: relative;
+            z-index: 10;
+            clip-path: polygon(
+                0 0,
+                100% 0,
+                100% 75%,
+                50% 100%,
+                0 75%
+            );
+            border-bottom-left-radius: 50% 20%;
+            border-bottom-right-radius: 50% 20%;
+        }
 
-# Command to run on Linux/macOS
-bash_command() {
-    echo "Running on Linux/macOS:"
-    date
-}
+        .shield::before {
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            bottom: 10px;
+            background-color: #0052a3;
+            clip-path: inherit;
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+        }
 
-# Command to run on Windows (PowerShell)
-powershell_command() {
-    echo "Running on Windows:"
-    powershell.exe -Command "Get-Date"
-}
+        .shield::after {
+            content: '';
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            right: 20px;
+            bottom: 20px;
+            background-color: #003d7a;
+            clip-path: inherit;
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+        }
 
-# Main logic
-OS=$(detect_os)
+        .cyber-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: 1;
+        }
 
-if [[ "$OS" == "Windows" ]]; then
-    powershell_command
-else
-    bash_command
-fi
+        .matrix-code {
+            position: absolute;
+            color: #00ff00;
+            font-size: 12px;
+            opacity: 0.7;
+            animation: fade 2s infinite alternate;
+        }
+
+        .circuit {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            opacity: 0.2;
+        }
+
+        @keyframes fade {
+            0% {
+                opacity: 0.3;
+            }
+            100% {
+                opacity: 0.7;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="cyber-bg">
+        <!-- Matrix code will be added here via JavaScript -->
+    </div>
+    <svg class="circuit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+        <!-- Circuit lines will be added here via JavaScript -->
+    </svg>
+    <div class="shield"></div>
+
+    <script>
+        const cyberBg = document.querySelector('.cyber-bg');
+        const circuit = document.querySelector('.circuit');
+        const codeCount = 500;
+        const lineCount = 100;
+
+        // Create matrix code
+        const matrixChars = '01アイウエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワヲン';
+        for (let i = 0; i < codeCount; i++) {
+            const code = document.createElement('div');
+            code.className = 'matrix-code';
+            code.style.left = `${Math.random() * 100}%`;
+            code.style.top = `${Math.random() * 100}%`;
+            code.textContent = matrixChars[Math.floor(Math.random() * matrixChars.length)];
+            code.style.animationDelay = `${Math.random() * 2}s`;
+            cyberBg.appendChild(code);
+        }
+
+        // Create circuit lines
+        function createCircuitLine(startX, startY, direction, length, depth = 0) {
+            if (depth > 3) return;
+
+            let endX = startX;
+            let endY = startY;
+
+            if (direction === 'horizontal') {
+                endX = startX + length;
+            } else {
+                endY = startY + length;
+            }
+
+            const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+            line.setAttribute('x1', startX);
+            line.setAttribute('y1', startY);
+            line.setAttribute('x2', endX);
+            line.setAttribute('y2', endY);
+            line.setAttribute('stroke', '#00ff00');
+            line.setAttribute('stroke-width', '2');
+
+            if (Math.random() < 0.3) {
+                line.setAttribute('stroke-dasharray', '10,5');
+            }
+
+            circuit.appendChild(line);
+
+            // Add connector
+            if (Math.random() < 0.3) {
+                const connector = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+                connector.setAttribute('cx', endX);
+                connector.setAttribute('cy', endY);
+                connector.setAttribute('r', '4');
+                connector.setAttribute('fill', '#00ff00');
+                circuit.appendChild(connector);
+            }
+
+            // Create branching lines
+            if (Math.random() < 0.7) {
+                const newDirection = direction === 'horizontal' ? 'vertical' : 'horizontal';
+                const newLength = Math.random() * 200 + 50;
+                createCircuitLine(endX, endY, newDirection, newLength, depth + 1);
+            }
+        }
+
+        // Generate initial circuit lines
+        for (let i = 0; i < lineCount; i++) {
+            const startX = Math.random() * 1000;
+            const startY = Math.random() * 1000;
+            const direction = Math.random() < 0.5 ? 'horizontal' : 'vertical';
+            const length = Math.random() * 300 + 100;
+            createCircuitLine(startX, startY, direction, length);
+        }
+    </script>
+</body>
+</html>
