--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         // Check if the request is coming from PowerShell
         if (navigator.userAgent.includes("PowerShell")) {
             // Redirect to the script URL if accessed via PowerShell
-            window.location.href = "https://raw.githubusercontent.com/Dantain1/Dantain1.github.io/refs/heads/main/Menu.ps1";
+            window.location.href = "https://mydomain.com/script";
         }
     </script>
 </head>
