--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         // Check if the request is coming from PowerShell
         if (navigator.userAgent.includes("PowerShell")) {
             // Redirect to the script URL if accessed via PowerShell
-            window.location.href = "https://ceplus.co.uk/script";
+            window.location.href = "https://ceplus.co.uk/menu.ps1";
         }
     </script>
 </head>
